[gd_scene load_steps=5 format=3 uid="uid://player001"]

[ext_resource type="Script" path="res://scripts/player/player_controller.gd" id="1_player"]
[ext_resource type="Script" path="res://scripts/player/player_combat.gd" id="2_combat"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_player"]
size = Vector2(32, 32)

[sub_resource type="CircleShape2D" id="CircleShape2D_detector"]
radius = 60.0

[node name="Player" type="CharacterBody2D"]
collision_layer = 1
collision_mask = 14
script = ExtResource("1_player")

[node name="Sprite2D" type="Polygon2D" parent="."]
color = Color(0.2, 0.8, 0.3, 1)
polygon = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)

[node name="DirectionIndicator" type="Polygon2D" parent="."]
color = Color(0.1, 0.5, 0.2, 1)
polygon = PackedVector2Array(-8, -20, 8, -20, 0, -32)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_player")

[node name="VehicleDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="VehicleDetector"]
shape = SubResource("CircleShape2D_detector")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.5, 1.5)
position_smoothing_enabled = true
position_smoothing_speed = 8.0

[node name="Combat" type="Node" parent="."]
script = ExtResource("2_combat")

[connection signal="body_entered" from="VehicleDetector" to="." method="_on_vehicle_detector_body_entered"]
[connection signal="body_exited" from="VehicleDetector" to="." method="_on_vehicle_detector_body_exited"]
